--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "Lua.diagnostics.disable": [
         "undefined-global",
-        "unused-local"
+        "unused-local",
+        "inject-field",
+        "undefined-field",
+        "need-check-nil",
+        "param-type-mismatch"
     ]
 }
