--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "inject-field",
         "undefined-field",
         "need-check-nil",
-        "param-type-mismatch"
+        "param-type-mismatch",
+        "cast-local-type",
+        "assign-type-mismatch"
     ]
 }
