--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "need-check-nil",
         "param-type-mismatch",
         "cast-local-type",
-        "assign-type-mismatch"
+        "assign-type-mismatch",
+        "deprecated"
     ]
 }
